--- a/nginx.conf
+++ b/nginx.conf
@@ -1,72 +1,76 @@
- user root;
+daemon  off;
 
- worker_processes 1;
+events {
+    worker_connections 1024;
+}
 
- events {
-   worker_connections 1024;
- }
+rtmp {
+    server {
+        listen 1935;
+        chunk_size 4000;
 
- http {
+        application encoder {
+            live on;
 
-
- server {
-     listen    80;
-     server_name localhost;
-
-     # rtmp stat
-     location /stat {
-       rtmp_stat all;
-       rtmp_stat_stylesheet stat.xsl;
-     }
-
-     location /stat.xsl {
-       # you can move stat.xsl to a different location
-       root /root/stat/;
-     }
-
-     # rtmp control
-     location /control {
-       rtmp_control all;
-     }
-     error_page  500 502 503 504 /50x.html;
-     location = /50x.html {
-       root  html;
-     }
+            exec ffmpeg -i rtmp://localhost:1935/encoder/$name
+              -ab 128k -c:v libx264 -b:v 2500k -f flv -g 30 -r 30 -s 1280x720 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_720p2628kbs
+              -ab 128k -c:v libx264 -b:v 1000k -f flv -g 30 -r 30 -s 854x480 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_480p1128kbs
+              -ab 128k -c:v libx264 -b:v 750k -f flv -g 30 -r 30 -s 640x360 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_360p878kbs
+              -ab 128k -c:v libx264 -b:v 400k -f flv -g 30 -r 30 -s 426x240 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_240p528kbs
+              -ab 64k -c:v libx264 -b:v 200k -f flv -g 15 -r 15 -s 426x240 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_240p264kbs;
+        }
 
 
+        application hls {
+            live on;
+            hls on;
+            hls_fragment_naming system;
+            hls_fragment 5s;
+            hls_path /data/hls;
+            hls_nested on;
 
-     # Client (VLC etc.) can access HLS here.
-     location /hls {
-       # Serve HLS fragments
-       types {
-         application/vnd.apple.mpegurl m3u8;
-         video/mp2t ts;
-       }
-       root /source;
-       add_header Cache-Control no-cache;
-     }
-   }
- }
- rtmp {
-   server {
-     listen 1935;
-     chunk_size 8192;
-     ping 30s;
-     notify_method get;
-     allow play all;
+            hls_variant _720p2628kbs BANDWIDTH=2628000,RESOLUTION=1280x720;
+            hls_variant _480p1128kbs BANDWIDTH=1128000,RESOLUTION=854x480;
+            hls_variant _360p878kbs BANDWIDTH=878000,RESOLUTION=640x360;
+            hls_variant _240p528kbs BANDWIDTH=528000,RESOLUTION=426x240;
+            hls_variant _240p264kbs BANDWIDTH=264000,RESOLUTION=426x240;
+        }
+    }
+}
 
-     application live {
-       live on;
-       record off;
-       exec ffmpeg -re -i rtmp://localhost/live/$name -c:v libx264 -c:a aac -ac 1 -strict -2 -crf 18 -profile:v baseline -maxrate 400k -bufsize 1835k -pix_fmt yuv420p -flags -global_header -hls_time 2 -hls_wrap 10 -start_number 1 /source/hls/$name.m3u8;
-     }
+http {
+    server {
+        listen 80;
 
-     # You should send x.264/aac RTMP Stream via ffmpeg to this application
-     application hls {
-       allow play all;
-       live on;
-       hls on;
-       hls_path /source/hls;
-     }
-   }
- }
+        location /hls {
+            types {
+                application/vnd.apple.mpegurl m3u8;
+                video/mp2t ts;
+            }
+            root /data;
+            add_header Cache-Control no-cache;
+            add_header Access-Control-Allow-Origin *;
+        }
+
+        location /stat {
+            rtmp_stat all;
+            rtmp_stat_stylesheet static/stat.xsl;
+        }
+
+        location /static {
+            alias /static;
+        }
+
+        location /crossdomain.xml {
+            default_type text/xml;
+            return 200 '<?xml version="1.0"?>
+                <!DOCTYPE cross-domain-policy SYSTEM "http://www.adobe.com/xml/dtds/cross-domain-policy.dtd">
+                <cross-domain-policy>
+                    <site-control permitted-cross-domain-policies="all"/>
+                    <allow-access-from domain="*" secure="false"/>
+                    <allow-http-request-headers-from domain="*" headers="*" secure="false"/>
+                </cross-domain-policy>';
+            expires 24h;
+        }
+    }
+}
