--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,8 @@ rtmp {
             live on;
             hls on;
             hls_fragment_naming system;
-            hls_fragment 5s;
+            hls_fragment 2s;
+            hls_playlist_length 10s;
             hls_path /data/hls;
             hls_nested on;
 
