--- a/nginx.conf
+++ b/nginx.conf
@@ -8,9 +8,11 @@ rtmp {
     server {
         listen 1935;
         chunk_size 4000;
+        notify_method get;
 
         application encoder {
             live on;
+            on_publish http://skillcoin.tv/publish/;
 
             exec ffmpeg -i rtmp://localhost:1935/encoder/$name
               -ab 128k -c:v libx264 -b:v 2500k -f flv -g 30 -r 30 -s 1280x720 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_720p2628kbs
