--- a/nginx.conf
+++ b/nginx.conf
@@ -8,30 +8,25 @@ events {
 rtmp {
     server {
         listen 1935;
-        chunk_size 4000;
-        notify_method get;
+        chunk_size 4096;
+
 
         application encoder {
             live on;
             on_publish http://skillcoin.tv/publish/;
-
-            exec ffmpeg -i rtmp://localhost:1935/encoder/$name
-              -ab 128k -c:v libx264 -b:v 2500k -f flv -g 30 -r 30 -s 1280x720 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_720p2628kbs
-              -ab 128k -c:v libx264 -b:v 1000k -f flv -g 30 -r 30 -s 854x480 -preset superfast -profile:v baseline rtmp://localhost:1935/hls/$name_480p1128kbs;
+            on_publish_done http://skillcoin.tv/publish/done;
+            exec ffmpeg -i rtmp://127.0.0.1:1935/encoder/$name
+             -ab 128k -c:v libx264 -b:v 2500k -f flv -g 30 -r 30 -s 1280x720 -preset superfast -profile:v baseline rtmp://127.0.0.1:1935/hls/$name;
         }
 
-
         application hls {
+            allow publish 127.0.0.1;
             live on;
             hls on;
-            hls_fragment_naming system;
             hls_fragment 2s;
             hls_playlist_length 10s;
             hls_path /data/hls;
             hls_nested on;
-
-            hls_variant _720p2628kbs BANDWIDTH=2628000,RESOLUTION=1280x720;
-            hls_variant _480p1128kbs BANDWIDTH=1128000,RESOLUTION=854x480;
         }
     }
 }
@@ -48,11 +43,6 @@ http {
             root /data;
             add_header Cache-Control no-cache;
             add_header Access-Control-Allow-Origin *;
-        }
-
-        location /static {
-            alias /static;
-        }
-
     }
+}
 }
