configure ffmpeg with libfdc_aac

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,15 +15,16 @@ rtmp {
             live on;
             on_publish http://skillcoin.tv/publish/;
             on_publish_done http://skillcoin.tv/publish/done;
-            exec ffmpeg -i rtmp://127.0.0.1:1935/encoder/$name
-             -ab 128k -c:v libx264 -b:v 2500k -f flv -g 30 -r 30 -s 1280x720 -preset superfast -profile:v baseline rtmp://127.0.0.1:1935/hls/$name;
+            exec /apps/bin/./avconv -i rtmp://127.0.0.1:1935/encoder/$name
+                -c:a libfdk_aac -b:a 128k -c:v libx264 -b:v 2500k -f flv -g 30 -r 30 -s 1280x720 -preset superfast
+                -profile:v baseline rtmp://127.0.0.1:1935/hls/$name;
         }
 
         application hls {
             allow publish 127.0.0.1;
             live on;
             hls on;
-            hls_fragment 2s;
+            hls_fragment 1s;
             hls_playlist_length 10s;
             hls_path /data/hls;
             hls_nested on;
