--- a/nginx.conf
+++ b/nginx.conf
@@ -9,12 +9,12 @@ rtmp {
     server {
         listen 1935;
         chunk_size 4096;
-
+        notify_method get;
 
         application encoder {
             live on;
             on_publish http://skillcoin.tv/publish/;
-            on_publish_done http://skillcoin.tv/publish/done;
+            on_publish_done http://skillcoin.tv/publish/done/;
             exec /apps/bin/./avconv -i rtmp://127.0.0.1:1935/encoder/$name
                 -c:a libfdk_aac -b:a 128k -c:v libx264 -b:v 2500k -f flv -g 30 -r 30 -s 1280x720 -preset superfast
                 -profile:v baseline rtmp://127.0.0.1:1935/hls/$name;
